<resources>
    <string name="app_name">RecyclerViewAssignment</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="user_avatar">User Avatar</string>
    <string name="delete_email">Delete Email</string>
    <string name="add_email">Add Email</string>
    <string name="erase">Erase</string>
    <string name="forward">Forward</string>
    <string name="send">SEND</string>
    <string name="forward_message">Forward Message</string>
    <string name="to">To:</string>
    <string name="name">Name:</string>
    <string name="text">Text:</string>
</resources>