<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000">

    <LinearLayout
        android:id="@+id/llMessage"
        android:layout_width="@dimen/s300dp"
        android:layout_height="@dimen/s350dp"
        android:layout_marginTop="@dimen/s128dp"
        android:background="?android:attr/windowBackgroundFallback"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvForwardMessageCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0080DC"
            android:paddingStart="@dimen/s16dp"
            android:paddingEnd="@dimen/s16dp"
            android:paddingTop="@dimen/s16dp"
            android:paddingBottom="@dimen/s16dp"
            android:text="@string/forward_message"
            android:textColor="@color/blue_grey_50"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llTo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s56dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/s8dp"
            android:paddingTop="@dimen/s16dp"
            android:paddingEnd="@dimen/s16dp"
            android:paddingBottom="@dimen/s0dp">

            <TextView
                android:id="@+id/tvToCaption"
                android:layout_width="@dimen/s20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/s0dp"
                android:paddingEnd="@dimen/s0dp"
                android:text="@string/to"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/etTo"
                android:layout_width="@dimen/s175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName|textEmailAddress"
                android:textSize="@dimen/text_large"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/s40dp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/s8dp"
            android:paddingTop="@dimen/s0dp"
            android:paddingEnd="@dimen/s16dp"
            android:paddingBottom="@dimen/s0dp">

            <TextView
                android:id="@+id/tvNameCaption"
                android:layout_width="@dimen/s20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/s8dp"
                android:paddingEnd="@dimen/s8dp"
                android:text="@string/name"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="@dimen/s175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_large"
                android:autofillHints=""
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="@dimen/s8dp"
            android:paddingTop="@dimen/s0dp"
            android:paddingEnd="@dimen/s16dp"
            android:paddingBottom="@dimen/s0dp">

            <TextView
                android:id="@+id/tvTextCaption"
                android:layout_width="@dimen/s10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/s8dp"
                android:paddingEnd="@dimen/s8dp"
                android:text="@string/text"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/etText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/lorem_ipsum"
                android:textSize="@dimen/text_large"
                android:autofillHints=""
                tools:ignore="LabelFor"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAction"
        android:layout_width="@dimen/s300dp"
        android:layout_height="@dimen/s45dp"
        android:layout_marginStart="@dimen/s1dp"
        android:background="?android:attr/windowBackgroundFallback"
        android:orientation="vertical"
        android:paddingStart="@dimen/s196dp"
        android:paddingEnd="@dimen/s0dp"
        android:paddingTop="@dimen/s5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMessage">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/s35dp"
            android:background="@color/design_default_color_background"
            android:elevation="@dimen/s8dp"
            android:text="@string/send"
            android:textAlignment="center"
            android:textColor="#3F8BD3"
            android:textSize="@dimen/text_small" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>